--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,7 +1,7 @@
 .card-container {
     display: flex;
     flex-direction: column;
-    background-color: #95dada;
+    background-color: #d2f7f7;
     border: 1px solid grey;
     border-radius: 5px;
     padding: 15px;
